now fix dark mode

--- a/app/app.css
+++ b/app/app.css
@@ -22,8 +22,6 @@
 
 html,
 body {
-  @apply bg-white dark:bg-gray-950;
-
   color-scheme: dark;
   background-color: var(--bg);
 
